--- a/sfg-pet-data/pom.xml
+++ b/sfg-pet-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>sfg-pet-clinic-divya</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
